--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inicio_superAdmin.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inicio_superAdmin.html
@@ -192,14 +192,14 @@
 
 
 
-        <li class="menu-item">
+        <li class="menu-item ruedita" >
           <a
                   href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
                   target="_blank"
                   class="menu-link"
           >
-            <i class="menu-icon tf-icons bx bx-file"></i>
-            <div data-i18n="Documentation">Ajustes</div>
+            <i class="menu-icon tf-icons bx bx-cog"></i>
+            <div data-i18n="Ajustes ">Ajustes</div>
           </a>
         </li>
       </ul>
@@ -238,11 +238,11 @@
                     </thead>
                     <tbody class="table-border-bottom-0">
                     <tr>
-                      <td><i class="fab fa-angular fa-lg text-danger me-3"></i> Angular Project</td>
+                      <td><i class="fab fa-angular fa-lg text-danger me-3"></i> Albert</td>
+                      <td> Cook</td>
                       <td>Albert Cook</td>
-                      <td>Albert Cook</td>
-                      <td>Albert Cook</td>
-                      <td>Albert Cook</td>
+                      <td>01234567</td>
+                      <td> Angular Project</td>
                       <td>
                         <div class="dropdown">
                           <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -263,11 +263,11 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><i class="fab fa-react fa-lg text-info me-3"></i> React Project</td>
+                      <td><i class="fab fa-react fa-lg text-info me-3"></i>Barry </td>
+                      <td> Hunter</td>
                       <td>Barry Hunter</td>
-                      <td>Barry Hunter</td>
-                      <td>Barry Hunter</td>
-                      <td>Barry Hunter</td>
+                      <td>01234567</td>
+                      <td>React Project</td>
                       <td>
                         <div class="dropdown">
                           <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -288,11 +288,11 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><i class="fab fa-vuejs fa-lg text-success me-3"></i> VueJs Project</td>
+                      <td><i class="fab fa-vuejs fa-lg text-success me-3"></i> Trevor</td>
+                      <td> Baker</td>
                       <td>Trevor Baker</td>
-                      <td>Trevor Baker</td>
-                      <td>Trevor Baker</td>
-                      <td>Trevor Baker</td>
+                      <td>01234567</td>
+                      <td>VueJs Project</td>
                       <td>
                         <div class="dropdown">
                           <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -313,11 +313,11 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><i class="fab fa-bootstrap fa-lg text-primary me-3"></i> Bootstrap Project</td>
+                      <td><i class="fab fa-bootstrap fa-lg text-primary me-3"></i>Jerry</td>
+                      <td> Milton</td>
                       <td>Jerry Milton</td>
-                      <td>Jerry Milton</td>
-                      <td>Jerry Milton</td>
-                      <td>Jerry Milton</td>
+                      <td>01234567</td>
+                      <td> Bootstrap Project</td>
                       <td>
                         <div class="dropdown">
                           <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -338,11 +338,11 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><i class="fab fa-angular fa-lg text-danger me-3"></i> Angular Project</td>
+                      <td><i class="fab fa-angular fa-lg text-danger me-3"></i> Albert</td>
+                      <td> Cook</td>
                       <td>Albert Cook</td>
-                      <td>Albert Cook</td>
-                      <td>Albert Cook</td>
-                      <td>Albert Cook</td>
+                      <td>01234567</td>
+                      <td>Angular Project</td>
                       <td>
                         <div class="dropdown">
                           <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -365,6 +365,27 @@
                     </tbody>
                   </table>
                 </div>
+
+              </div>
+              <br>
+              <div>
+              <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-end">
+                  <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                      <span aria-hidden="true">&laquo;</span>
+                    </a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="#">1</a></li>
+                  <li class="page-item"><a class="page-link" href="#">2</a></li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                  <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                      <span aria-hidden="true">&raquo;</span>
+                    </a>
+                  </li>
+                </ul>
+              </nav>
               </div>
               <!-- Bootstrap Table with Header - Light -->
             </div>
@@ -381,19 +402,21 @@
                     <tr>
                       <th><i class="fab fa-angular fa-lg text-danger me-3"></i>Nombre</th>
                       <th>Apellido</th>
-                      <th>Correo</th>
+                      <th>Teléfono</th>
                       <th>DNI</th>
-                      <th>Dirección</th>
+                      <th>RUC</th>
+                      <th>Tienda</th>
                       <th>Actions</th>
                     </tr>
                     </thead>
                     <tbody class="table-border-bottom-0">
                     <tr>
-                      <td><i class="fab fa-angular fa-lg text-danger me-3"></i> Angular Project</td>
-                      <td>Albert Cook</td>
-                      <td>Albert Cook</td>
-                      <td>Albert Cook</td>
-                      <td>Albert Cook</td>
+                      <td><i class="fab fa-angular fa-lg text-danger me-3"></i>Albert</td>
+                      <td>Cook</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>Angular Project</td>
                       <td>
                         <div class="dropdown">
                           <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -414,11 +437,12 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><i class="fab fa-react fa-lg text-info me-3"></i> React Project</td>
-                      <td>Barry Hunter</td>
-                      <td>Barry Hunter</td>
-                      <td>Barry Hunter</td>
-                      <td>Barry Hunter</td>
+                      <td><i class="fab fa-react fa-lg text-info me-3"></i>Barry</td>
+                      <td>Hunter</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>React Project</td>
                       <td>
                         <div class="dropdown">
                           <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -439,11 +463,12 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><i class="fab fa-vuejs fa-lg text-success me-3"></i> VueJs Project</td>
-                      <td>Trevor Baker</td>
-                      <td>Trevor Baker</td>
-                      <td>Trevor Baker</td>
-                      <td>Trevor Baker</td>
+                      <td><i class="fab fa-vuejs fa-lg text-success me-3"></i>Trevor</td>
+                      <td>Baker</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>VueJs Project</td>
                       <td>
                         <div class="dropdown">
                           <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -464,11 +489,12 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><i class="fab fa-bootstrap fa-lg text-primary me-3"></i> Bootstrap Project</td>
-                      <td>Jerry Milton</td>
-                      <td>Jerry Milton</td>
-                      <td>Jerry Milton</td>
-                      <td>Jerry Milton</td>
+                      <td><i class="fab fa-bootstrap fa-lg text-primary me-3"></i>Jerry</td>
+                      <td>Milton</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>Bootstrap Project</td>
                       <td>
                         <div class="dropdown">
                           <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -489,11 +515,12 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><i class="fab fa-angular fa-lg text-danger me-3"></i> Angular Project</td>
-                      <td>Albert Cook</td>
-                      <td>Albert Cook</td>
-                      <td>Albert Cook</td>
-                      <td>Albert Cook</td>
+                      <td><i class="fab fa-angular fa-lg text-danger me-3"></i>Albert</td>
+                      <td>Cook</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>Angular Project</td>
                       <td>
                         <div class="dropdown">
                           <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
@@ -517,7 +544,26 @@
                   </table>
                 </div>
               </div>
-              <!-- Bootstrap Table with Header - Light -->
+              <br>
+              <div>
+                <nav aria-label="Page navigation example">
+                  <ul class="pagination justify-content-end">
+                    <li class="page-item">
+                      <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                      </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                      <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>              <!-- Bootstrap Table with Header - Light -->
             </div>
             <!--/ Tabla 2 -->
 
@@ -526,38 +572,7 @@
         </div>
         <!-- / Content -->
 
-        <!-- Footer -->
-        <footer class="content-footer footer bg-footer-theme">
-          <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
-            <div class="mb-2 mb-md-0">
-              ©
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              , made with ❤️ by
-              <a href="https://themeselection.com" target="_blank" class="footer-link fw-bolder">ThemeSelection</a>
-            </div>
-            <div>
-              <a href="https://themeselection.com/license/" class="footer-link me-4" target="_blank">License</a>
-              <a href="https://themeselection.com/" target="_blank" class="footer-link me-4">More Themes</a>
 
-              <a
-                      href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
-                      target="_blank"
-                      class="footer-link me-4"
-              >Documentation</a
-              >
-
-              <a
-                      href="https://github.com/themeselection/sneat-html-admin-template-free/issues"
-                      target="_blank"
-                      class="footer-link me-4"
-              >Support</a
-              >
-            </div>
-          </div>
-        </footer>
-        <!-- / Footer -->
 
         <div class="content-backdrop fade"></div>
       </div>
@@ -571,14 +586,7 @@
 </div>
 <!-- / Layout wrapper -->
 
-<div class="buy-now">
-  <a
-          href="https://themeselection.com/products/sneat-bootstrap-html-admin-template/"
-          target="_blank"
-          class="btn btn-danger btn-buy-now"
-  >Upgrade to Pro</a
-  >
-</div>
+
 
 <!-- Core JS -->
 <!-- build:js assets/vendor/js/core.js -->
