--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/ajustes_superadmin.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/ajustes_superadmin.html
@@ -129,7 +129,7 @@
 
       <ul class="menu-inner py-1">
         <!-- Dashboard -->
-        <li class="menu-item active">
+        <li class="menu-item ">
           <a href="inicio_superadmin.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
             <div data-i18n="Inicio">Inicio</div>
@@ -180,9 +180,9 @@
 
 
 
-        <li class="menu-item ruedita" >
+        <li class="menu-item active ruedita" >
           <a
-                  href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
+                  href="ajustes_superadmin.html"
                   target="_blank"
                   class="menu-link"
           >
