--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/gestion_usuarios.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/gestion_usuarios.html
@@ -129,7 +129,7 @@
 
       <ul class="menu-inner py-1">
         <!-- Dashboard -->
-        <li class="menu-item active">
+        <li class="menu-item ">
           <a href="inicio_superadmin.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
             <div data-i18n="Inicio">Inicio</div>
@@ -154,7 +154,7 @@
         <li class="menu-header small text-uppercase">
           <span class="menu-header-text">Páginas</span>
         </li>
-        <li class="menu-item">
+        <li class="menu-item active">
           <a href="javascript:void(0);" class="menu-link menu-toggle">
             <i class="menu-icon tf-icons bx bx-dock-top"></i>
             <div data-i18n="Gestión de Roles">Gestión de Roles</div>
@@ -170,7 +170,7 @@
                 <div data-i18n="Agente">Agente</div>
               </a>
             </li>
-            <li class="menu-item">
+            <li class="menu-item active">
               <a href="gestion_usuarios.html" class="menu-link">
                 <div data-i18n="Usuario">Usuario</div>
               </a>
@@ -182,7 +182,7 @@
 
         <li class="menu-item ruedita" >
           <a
-                  href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
+                  href="ajustes_superadmin.html"
                   target="_blank"
                   class="menu-link"
           >
