--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inicio_superadmin.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inicio_superadmin.html
@@ -73,7 +73,7 @@
 
     <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
       <div class="app-brand demo">
-        <a href="index.html" class="app-brand-link">
+        <a href="inicio_superadmin.html" class="app-brand-link">
               <span class="app-brand-logo demo">
                 <svg
                         width="25"
@@ -142,22 +142,22 @@
       <ul class="menu-inner py-1">
         <!-- Dashboard -->
         <li class="menu-item active">
-          <a href="index.html" class="menu-link">
+          <a href="inicio_superadmin.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
-            <div data-i18n="Analytics">Inicio</div>
+            <div data-i18n="Inicio">Inicio</div>
           </a>
         </li>
 
         <li class="menu-item">
-          <a href="cards-basic.html" class="menu-link">
+          <a href="dashboard_superadmin.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-collection"></i>
-            <div data-i18n="Basic">Dashboard</div>
+            <div data-i18n="Dashboard">Dashboard</div>
           </a>
         </li>
         <li class="menu-item">
-          <a href="cards-basic.html" class="menu-link">
+          <a href="inventario_superadmin.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-collection"></i>
-            <div data-i18n="Basic">Inventario</div>
+            <div data-i18n="Inventario">Inventario</div>
           </a>
         </li>
 
@@ -169,22 +169,22 @@
         <li class="menu-item">
           <a href="javascript:void(0);" class="menu-link menu-toggle">
             <i class="menu-icon tf-icons bx bx-dock-top"></i>
-            <div data-i18n="Account Settings">Gestión de Roles</div>
+            <div data-i18n="Gestión de Roles">Gestión de Roles</div>
           </a>
           <ul class="menu-sub">
             <li class="menu-item">
-              <a href="pages-account-settings-account.html" class="menu-link">
-                <div data-i18n="Account">Coordinador Zonal</div>
+              <a href="gestion_coordinadores.html" class="menu-link">
+                <div data-i18n="Coordinador Zonal">Coordinador Zonal</div>
               </a>
             </li>
             <li class="menu-item">
-              <a href="pages-account-settings-notifications.html" class="menu-link">
-                <div data-i18n="Notifications">Agente</div>
+              <a href="gestion_agentes.html" class="menu-link">
+                <div data-i18n="Agente">Agente</div>
               </a>
             </li>
             <li class="menu-item">
-              <a href="pages-account-settings-connections.html" class="menu-link">
-                <div data-i18n="Connections">Usuario</div>
+              <a href="gestion_usuarios.html" class="menu-link">
+                <div data-i18n="Usuario">Usuario</div>
               </a>
             </li>
           </ul>
@@ -194,7 +194,7 @@
 
         <li class="menu-item ruedita" >
           <a
-                  href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
+                  href="ajustes_superadmin.html"
                   target="_blank"
                   class="menu-link"
           >
