--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inventario_superadmin.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inventario_superadmin.html
@@ -129,7 +129,7 @@
 
       <ul class="menu-inner py-1">
         <!-- Dashboard -->
-        <li class="menu-item active">
+        <li class="menu-item ">
           <a href="inicio_superadmin.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
             <div data-i18n="Inicio">Inicio</div>
@@ -142,7 +142,7 @@
             <div data-i18n="Dashboard">Dashboard</div>
           </a>
         </li>
-        <li class="menu-item">
+        <li class="menu-item active">
           <a href="inventario_superadmin.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-collection"></i>
             <div data-i18n="Inventario">Inventario</div>
@@ -182,7 +182,7 @@
 
         <li class="menu-item ruedita" >
           <a
-                  href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
+                  href="ajustes_superadmin.html"
                   target="_blank"
                   class="menu-link"
           >
