--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/plantilla.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/plantilla.html
@@ -180,22 +180,124 @@
 
 
 
-        <li class="menu-item ruedita" >
-          <a
-                  href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
-                  target="_blank"
-                  class="menu-link"
-          >
-            <i class="menu-icon tf-icons bx bx-cog"></i>
-            <div data-i18n="Ajustes ">Ajustes</div>
-          </a>
-        </li>
+
       </ul>
     </aside>
     <!-- / Menu -->
     <!-- Layout container -->
     <div class="layout-page">
+      <!-- Navbar -->
 
+      <nav
+              class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
+              id="layout-navbar"
+      >
+        <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
+          <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
+            <i class="bx bx-menu bx-sm"></i>
+          </a>
+        </div>
+
+        <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
+
+
+          <ul class="navbar-nav flex-row align-items-center ms-auto">
+            <!-- Place this tag where you want the button to render. -->
+
+
+            <!-- Notificaciones -->
+            <li class="nav-item navbar-dropdown dropdown-user dropdown">
+              <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
+                <div class="bx bx-bell"></div>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end">
+
+
+                <li>
+                  <a class="dropdown-item" href="#">
+                    <span class="align-middle">Notificación 1</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">
+                    <span class="align-middle">Notificación 2</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">
+                    <span class="align-middle">Notificación 3</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">
+                    <span class="align-middle">Notificación 4</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">
+                    <span class="align-middle">Notificación 5</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <!--/ Notificaciones -->
+
+            <!-- User -->
+            <li class="nav-item navbar-dropdown dropdown-user dropdown">
+              <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
+                <div class="avatar avatar-online">
+                  <img src="../../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                </div>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end">
+                <li>
+                  <a class="dropdown-item" href="#">
+                    <div class="d-flex">
+                      <div class="flex-shrink-0 me-3">
+                        <div class="avatar avatar-online">
+                          <img src="../../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                        </div>
+                      </div>
+                      <div class="flex-grow-1">
+                        <span class="fw-semibold d-block">John Doe</span>
+                        <small class="text-muted">Admin</small>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <div class="dropdown-divider"></div>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">
+                    <i class="bx bx-user me-2"></i>
+                    <span class="align-middle">Mi Perfil</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="ajustes_superadmin.html">
+                    <i class="bx bx-cog me-2"></i>
+                    <span class="align-middle">Ajustes</span>
+                  </a>
+                </li>
+
+                <li>
+                  <div class="dropdown-divider"></div>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="auth-login-basic.html">
+                    <i class="bx bx-power-off me-2"></i>
+                    <span class="align-middle">Cerrar Sesión</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <!--/ User -->
+          </ul>
+        </div>
+      </nav>
+
+      <!-- / Navbar -->
 
       <!-- Content wrapper -->
       <div class="content-wrapper">
