--- a/HTML Modelo/sneat-1.0.0/html/auth-login-basic.html
+++ b/HTML Modelo/sneat-1.0.0/html/auth-login-basic.html
@@ -135,8 +135,8 @@
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-2">Welcome to Sneat! 👋</h4>
-              <p class="mb-4">Please sign-in to your account and start the adventure</p>
+              <h4 class="mb-2">Bienvenido a TelExpress! 👋</h4>
+              <p class="mb-4">Loguéate o crea una cuenta nueva!</p>
 
               <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
                 <div class="mb-3">
