--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inventario_productos.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inventario_productos.html
@@ -73,7 +73,9 @@
                 
             <!-- boton de colapso de menu que permite ajustarlo a pantallas peque;as-->
             <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
-              <i class="bx bx-chevron-left bx-sm align-middle"></i>
+              <i class="bx bx-chevron-left bx-sm align-middle">
+                ::before
+              </i>
             </a>
           </div>
 
