login corregido y inicio de coord. zonal

--- a/HTML Modelo/sneat-1.0.0/html/Sistema/Login.html
+++ b/HTML Modelo/sneat-1.0.0/html/Sistema/Login.html
@@ -98,7 +98,7 @@
               </div>
               <!-- /Logo -->
               <h4 class="mb-2" style="font-family: Zilla Slab">Bienvenido a TelExpress! </h4>
-              <p class="mb-4" style="font-family: Zilla Slab, sans-serif;">Loguéate o crea una cuenta nueva</p>
+              <p class="mb-4" style="font-family: Zilla Slab, sans-serif;">Loguéate o crea tu propia cuenta</p>
 
               <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
                 <div class="mb-3">
@@ -116,7 +116,7 @@
                   <div class="d-flex justify-content-between">
                     <label class="form-label" for="password">Contraseña</label>
                     <a href="auth-forgot-password-basic.html">
-                      <small>Olvidaste tu contraseña?</small>
+                      <small>Olvidé mi contraseña</small>
                     </a>
                   </div>
                   <div class="input-group input-group-merge">
