--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inicio_coordinador_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inicio_coordinador_zonal.html
@@ -10,7 +10,7 @@
 * Copyright ThemeSelection (https://themeselection.com)
 
 =========================================================
- -->
+-->
 <!-- beautify ignore:start -->
 <html
         lang="en"
@@ -38,7 +38,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-            href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700&display=swap"
             rel="stylesheet"
     />
 
@@ -76,22 +76,20 @@
     <div class="layout-container">
         <!-- Menu -->
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-
             <!-- Contenedor para la imagen centrada -->
             <div style="text-align: center;">
                 <img src="logo.png" alt="Imagen" style="width: 150px; margin-bottom: -45px;">
             </div>
 
             <div class="app-brand demo" style="text-align: center;">
-                <a href="inicio_coordinador_zonal.html" class="app-brand-link"> <!--Aca colocar el html de inicio del flujo correspondiente-->
-                    <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span> <!-- Añadimos padding para ajustar a la derecha -->
+                <a href="inicio_coordinador_zonal.html" class="app-brand-link">
+                    <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span>
                 </a>
 
                 <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
                     <i class="bx bx-chevron-left bx-sm align-middle"></i>
                 </a>
             </div>
-            <!-- Contenedor para la imagen centrada -->
 
             <div class="menu-inner-shadow"></div>
 
@@ -117,7 +115,6 @@
                         <i class="menu-icon tf-icons bx bx-user-plus"></i>
                         <div data-i18n="Crear agente">Crear agente</div>
                     </a>
-
                 </li>
                 <li class="menu-item">
                     <a href="javascript:void(0);" class="menu-link">
@@ -132,8 +129,6 @@
                     </a>
                 </li>
 
-                </li>
-
             </ul>
         </aside>
         <!-- / Menu -->
@@ -141,11 +136,7 @@
         <!-- Layout container -->
         <div class="layout-page">
             <!-- Navbar -->
-
-            <nav
-                    class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
-                    id="layout-navbar"
-            >
+            <nav class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme" id="layout-navbar">
                 <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
                     <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
                         <i class="bx bx-menu bx-sm"></i>
@@ -161,91 +152,71 @@
                     <!-- /Search -->
 
                     <ul class="navbar-nav flex-row align-items-center ms-auto">
-
                         <!-- Notificaciones -->
                         <li class="nav-item navbar-dropdown dropdown-user dropdown">
                             <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-                                <!-- Icono de campana con contador de notificaciones -->
                                 <div class="position-relative">
                                     <div class="bx bx-bell" style="font-size: 26px; color: #7367F0;"></div>
-                                    <!-- Contador de notificaciones -->
-                                    <span class="badge bg-danger rounded-circle position-absolute d-flex justify-content-center align-items-center"
-                                          style="top: -5px; right: -5px; font-size: 12px; width: 18px; height: 18px;">
-        5
-      </span>
+                                    <span class="badge bg-danger rounded-circle position-absolute d-flex justify-content-center align-items-center" style="top: -5px; right: -5px; font-size: 12px; width: 18px; height: 18px;">
+                      5
+                    </span>
                                 </div>
                             </a>
-
-                            <!-- Dropdown de notificaciones -->
                             <ul class="dropdown-menu dropdown-menu-end">
-                                <li class="dropdown-header">Notificaciones</li> <!-- Encabezado -->
-
-                                <!-- Notificación 1 -->
+                                <li class="dropdown-header">Notificaciones</li>
                                 <li>
                                     <a class="dropdown-item" href="#">
                                         <div class="d-flex align-items-center">
-                                            <div class="bx bx-message-square-dots me-3" style="font-size: 20px; color: #7367F0;"></div> <!-- Ícono de la notificación -->
+                                            <div class="bx bx-message-square-dots me-3" style="font-size: 20px; color: #7367F0;"></div>
                                             <div>
                                                 <span class="d-block">Nueva solicitud recibida</span>
-                                                <small class="text-muted">Hace 5 minutos</small> <!-- Hora de la notificación -->
+                                                <small class="text-muted">Hace 5 minutos</small>
                                             </div>
                                         </div>
                                     </a>
                                 </li>
 
-                                <!-- Notificación 2 -->
                                 <li>
                                     <a class="dropdown-item" href="#">
                                         <div class="d-flex align-items-center">
-                                            <div class="bx bx-check-circle me-3" style="font-size: 20px; color: #28C76F;"></div> <!-- Ícono de confirmación -->
+                                            <div class="bx bx-check-circle me-3" style="font-size: 20px; color: #28C76F;"></div>
                                             <div>
                                                 <span class="d-block">Tarea completada</span>
-                                                <small class="text-muted">Hace 2 horas</small> <!-- Hora de la notificación -->
+                                                <small class="text-muted">Hace 2 horas</small>
                                             </div>
                                         </div>
                                     </a>
                                 </li>
 
-                                <!-- Notificación 3 -->
                                 <li>
                                     <a class="dropdown-item" href="#">
                                         <div class="d-flex align-items-center">
-                                            <div class="bx bx-error me-3" style="font-size: 20px; color: #EA5455;"></div> <!-- Ícono de error -->
+                                            <div class="bx bx-error me-3" style="font-size: 20px; color: #EA5455;"></div>
                                             <div>
                                                 <span class="d-block">Error en el sistema</span>
-                                                <small class="text-muted">Hace 1 día</small> <!-- Hora de la notificación -->
+                                                <small class="text-muted">Hace 1 día</small>
                                             </div>
                                         </div>
                                     </a>
                                 </li>
 
-                                <!-- Notificación 4 -->
                                 <li>
                                     <a class="dropdown-item" href="#">
                                         <div class="d-flex align-items-center">
-                                            <div class="bx bx-download me-3" style="font-size: 20px; color: #FF9F43;"></div> <!-- Ícono de descarga -->
+                                            <div class="bx bx-download me-3" style="font-size: 20px; color: #FF9F43;"></div>
                                             <div>
                                                 <span class="d-block">Archivo descargado</span>
-                                                <small class="text-muted">Hace 3 días</small> <!-- Hora de la notificación -->
+                                                <small class="text-muted">Hace 3 días</small>
                                             </div>
                                         </div>
                                     </a>
                                 </li>
 
-                                <!-- Ver todas las notificaciones -->
                                 <li class="dropdown-footer">
                                     <a class="dropdown-item text-center text-primary" href="#">Ver todas las notificaciones</a>
                                 </li>
                             </ul>
                         </li>
-                        <!-- Notificaciones -->
-
-
-
-
-
-
-
 
                         <!-- User -->
                         <li class="nav-item navbar-dropdown dropdown-user dropdown">
@@ -287,11 +258,11 @@
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="#">
-                        <span class="d-flex align-items-center align-middle">
-                          <i class="flex-shrink-0 bx bx-credit-card me-2"></i>
-                          <span class="flex-grow-1 align-middle">Billing</span>
-                          <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>
-                        </span>
+                      <span class="d-flex align-items-center align-middle">
+                        <i class="flex-shrink-0 bx bx-credit-card me-2"></i>
+                        <span class="flex-grow-1 align-middle">Billing</span>
+                        <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>
+                      </span>
                                     </a>
                                 </li>
                                 <li>
@@ -305,44 +276,47 @@
                                 </li>
                             </ul>
                         </li>
-                        <!--/ User -->
                     </ul>
                 </div>
+            </nav>
+            <!-- / Navbar -->
 
-
+            <!-- Content wrapper -->
+            <div class="content-wrapper">
+                <!-- Aquí se agrega el contenido central -->
+                <div class="container-xxl flex-grow-1 container-p-y">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Estadísticas recientes</h5>
+                            <p class="card-text">Aquí puedes incluir gráficas, tablas u otros elementos que quieras mostrar en esta área de contenido principal.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- /Aquí termina el contenido central -->
+            </div>
+            <!-- / Content wrapper -->
         </div>
-        <!-- Content wrapper -->
+        <!-- / Layout page -->
     </div>
-    <!-- / Layout page -->
-</div>
 
-<!-- Overlay -->
-<div class="layout-overlay layout-menu-toggle"></div>
+    <!-- Overlay -->
+    <div class="layout-overlay layout-menu-toggle"></div>
 </div>
 <!-- / Layout wrapper -->
 
-
-
 <!-- Core JS -->
-<!-- build:js assets/vendor/js/core.js -->
 <script src="../../assets/vendor/libs/jquery/jquery.js"></script>
 <script src="../../assets/vendor/libs/popper/popper.js"></script>
 <script src="../../assets/vendor/js/bootstrap.js"></script>
 <script src="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-
 <script src="../../assets/vendor/js/menu.js"></script>
-<!-- endbuild -->
 
 <!-- Vendors JS -->
 <script src="../../assets/vendor/libs/apex-charts/apexcharts.js"></script>
-
 <!-- Main JS -->
 <script src="../../assets/js/main.js"></script>
-
 <!-- Page JS -->
 <script src="../../assets/js/dashboards-analytics.js"></script>
-
-<!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
