--- a/HTML Modelo/sneat-1.0.0/html/ui-badges.html
+++ b/HTML Modelo/sneat-1.0.0/html/ui-badges.html
@@ -623,7 +623,7 @@
                         <span class="badge bg-label-secondary">Secondary</span>
                         <span class="badge bg-label-success">Success</span>
                         <span class="badge bg-label-danger">Danger</span>
-                        <span class="badge bg-label-warning">Warning</span>
+                        <span class="badge bg-label-warning">Hola</span>
                         <span class="badge bg-label-info">Info</span>
                         <span class="badge bg-label-dark">Dark</span>
                       </div>
